@@ -175,6 +175,11 @@ Disable output filtering. By default the output filter is enabled and only
 PAT/PMT/SDT and data packets are left in the output. Everything else not
 mentioned in PMT like NIT, EIT, TDT tables and unknown pids is removed.
 .TP
+\fB\-3\fR, \fB\-\-output\-enc\-pass\fR
+Output the stream even if it is encrypted. By default tsdecrypt detects
+if the stream is still encrypted after passing through decryption and
+does not output it.
+.TP
 \fB\-y\fR, \fB\-\-output\-nit\-pass\fR
 Pass through NIT packets when output filtering is enabled.
 .TP
@@ -392,6 +397,10 @@ currently defined events are:
   \fBINPUT_TIMEOUT\fR   There was no data on the input.
 
   \fBINPUT_OK\fR        The data have appeared on the input.
+
+  \fBENCRYPTED_OUTPUT\fR The received keyword can not decrypt the stream
+
+  \fBOUTPUT_OK\fR       The stream that is beeing processed is decrypted
 
   \fBSTOP\fR            tsdecrypt was stopped.
 
